Bug 375909 - nsCanvasRenderingContext2d incorrectly calculates some coordinates (has appunits * appunits, not appunits/appunits)p=Jeremy Lea <reg@freebsd.org>r+sr=roc